--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 
 [dependencies]
 reqwest = "0.9.19"
+chrono = "0.4.7"
 
 serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0.98"
